--- a/Tracker_Dashboard/templates/chatroom.html
+++ b/Tracker_Dashboard/templates/chatroom.html
@@ -3,7 +3,7 @@
 {% block title %}Chatroom{% endblock %}
 
 {% block content %}
-<section id="chatroom-section" class="section-content hidden">
+<section id="chatroom-section" class="section-content">
     <div class="bg-light-card dark:bg-dark-card rounded-lg border border-light-border dark:border-dark-border h-[calc(100vh-9rem)] flex flex-col">
         <div class="border-b border-light-border dark:border-dark-border p-4">
             <h2 class="text-lg font-bold">Project Chatroom</h2>
