--- a/Tracker_Dashboard/templates/documentation.html
+++ b/Tracker_Dashboard/templates/documentation.html
@@ -3,7 +3,7 @@
 {% block title %}Documentation{% endblock %}
 
 {% block content %}
-<section id="documentation-section" class="section-content hidden">
+<section id="documentation-section" class="section-content">
     <div class="mb-6">
         <h2 class="text-xl font-bold mb-4">Project Documentation</h2>
         
