--- a/Tracker_Dashboard/templates/group_collaboration.html
+++ b/Tracker_Dashboard/templates/group_collaboration.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_stud.html' %}
 
 {% block title %}Group Collaboration{% endblock %}
+{% block page_title %}Group_Collaboration{% endblock %}
 
 {% block content %}
-<section id="group-section" class="section-content">
+<section id="group-section" class="student-section">
     <div class="mb-6">
         <h2 class="text-xl font-bold mb-4">Group Collaboration</h2>
         
