--- a/Tracker_Dashboard/templates/reports.html
+++ b/Tracker_Dashboard/templates/reports.html
@@ -1,10 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'base_stud.html' %}
 
 {% block title %}Reports{% endblock %}
+{% block page_title %}Reports{% endblock %}
 
 {% block content %}
 <!--Students reports-->
-<section id="reports-section" class="section-content">
+<section id="reports-section" class="student-section">
     <div class="mb-6">
         <h2 class="text-xl font-bold mb-4">Progress Reports</h2>
         
@@ -235,7 +236,7 @@
     </div>
 </section>
      <!-- Section: Supervisor Reports -->
-<section id="supervisor-reports-section" class="section-content">
+<section id="supervisor-reports-section" class="supervisor-section">
     <div class="mb-6">
         <h2 class="text-xl font-bold mb-4">Supervisor Reports &amp; Analytics</h2>
         
