--- a/Tracker_Dashboard/templates/student-groups.html
+++ b/Tracker_Dashboard/templates/student-groups.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_super.html' %}
 
 {% block title %}Student-Groups{% endblock %}
+{% block page_title %}Student-Groups{% endblock %}
 
 {% block content %}
-<section id="student-groups-section" class="section-content">
+<section id="student-groups-section" class="supervisor-section">
     <div class="mb-6">
         <div class="flex justify-between items-center mb-4">
             <h2 class="text-xl font-bold">Student Groups</h2>
