--- a/Tracker_Dashboard/templates/chatroom.html
+++ b/Tracker_Dashboard/templates/chatroom.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_stud.html' %}
 
 {% block title %}Chatroom{% endblock %}
+{% block page_title %}Chatroom{% endblock %}
 
 {% block content %}
-<section id="chatroom-section" class="section-content">
+<section id="chatroom-section" class="student-section">
     <div class="bg-light-card dark:bg-dark-card rounded-lg border border-light-border dark:border-dark-border h-[calc(100vh-9rem)] flex flex-col">
         <div class="border-b border-light-border dark:border-dark-border p-4">
             <h2 class="text-lg font-bold">Project Chatroom</h2>
