--- a/Tracker_Dashboard/templates/dashboard.html
+++ b/Tracker_Dashboard/templates/dashboard.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_super.html' %}
 
 {% block title %}Dashboard{% endblock %}
+{% block page_title %}Dashboard{% endblock %}
 
 {% block content %}
-<section id="supervisor-home-section" class="section-content">
+<section id="supervisor-home-section" class="supervisor-section">
     <div class="mb-6">
         <h2 class="text-xl font-bold mb-4">Supervisor Dashboard</h2>
         
