--- a/Tracker_Dashboard/templates/evaluation.html
+++ b/Tracker_Dashboard/templates/evaluation.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_super.html' %}
 
 {% block title %}Evaluation{% endblock %}
+{% block page_title %}Evaluation{% endblock %}
 
 {% block content %}
-<section id="evaluation-section" class="section-content">
+<section id="evaluation-section" class="supervisor-section">
     <div class="mb-6">
         <h2 class="text-xl font-bold mb-4">Student Evaluation</h2>
         
