--- a/Tracker_Dashboard/templates/home.html
+++ b/Tracker_Dashboard/templates/home.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_stud.html' %}
 
 {% block title %}Home{% endblock %}
+{% block page_title %}Home{% endblock %}
 
 {% block content %}
-<section id="home-section" class="section-content">
+<section id="home-section" class="student-section">
     <!-- Dashboard Stats -->
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-6">
         <div class="bg-light-card dark:bg-dark-card rounded-lg p-4 border border-light-border dark:border-dark-border">
@@ -147,4 +148,4 @@
         </div>
     </div>
 </section>
-{% endblock %} 
+{% endblock %}
