--- a/Tracker_Dashboard/templates/progress.html
+++ b/Tracker_Dashboard/templates/progress.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_stud.html' %}
 
 {% block title %}Progress{% endblock %}
+{% block page_title %}Progress{% endblock %}
 
 {% block content %}
-<section id="progress-section" class="section-content">
+<section id="progress-section" class="student-section">
     <div class="mb-6">
         <h2 class="text-xl font-bold mb-4">Project Progress</h2>
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
