--- a/Tracker_Dashboard/templates/review.html
+++ b/Tracker_Dashboard/templates/review.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_super.html' %}
 
 {% block title %}Review Documents{% endblock %}
+{% block page_title %}Review Documents{% endblock %}
 
 {% block content %}
-<section id="review-documents-section" class="section-content">
+<section id="review-documents-section" class="supervisor-section">
     <div class="mb-6">
         <h2 class="text-xl font-bold mb-4">Review Documents</h2>
         
