--- a/Tracker_Dashboard/templates/settings.html
+++ b/Tracker_Dashboard/templates/settings.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base_stud.html' %}
 
 {% block title %}Settings{% endblock %}
+{% block page_title %}Settings{% endblock %}
 
 {% block content %}
-<section id="settings-section" class="section-content">
+<section id="settings-section" class="student-section">
     <div class="mb-6">
         <h2 class="text-xl font-bold mb-4" id="settings-title">Student Settings</h2>
         
