succefully separated the student and the supervisor  view

--- a/Tracker_Dashboard/templates/reports_super.html
+++ b/Tracker_Dashboard/templates/reports_super.html
@@ -1,10 +1,9 @@
 {% extends 'base_super.html' %}
 
-{% block title %}Review Documents{% endblock %}
-{% block page_title %}Review Documents{% endblock %}
+{% block title %}Reports{% endblock %}
+{% block page_title %}Reports{% endblock %}
 
 {% block content %}
-  <!-- Section: Supervisor Reports -->
   <section id="supervisor-reports-section" class="supervisor-section">
     <div class="mb-6">
         <h2 class="text-xl font-bold mb-4">Supervisor Reports &amp; Analytics</h2>
