--- a/Tracker_Dashboard/templates/settings_super.html
+++ b/Tracker_Dashboard/templates/settings_super.html
@@ -1,10 +1,10 @@
 {% extends 'base_super.html' %}
 
-{% block title %}Student-Groups{% endblock %}
-{% block page_title %}Student-Groups{% endblock %}
+{% block title %}Settings{% endblock %}
+{% block page_title %}Settings{% endblock %}
 
 {% block content %}
-<section id="supervisor-settings-section" class="section-content supervisor-section hidden">
+<section id="supervisor-settings-section" class="supervisor-section">
     <div class="mb-6">
         <h2 class="text-xl font-bold mb-4">Supervisor Settings</h2>
 
