Successfully separated the js files to handle views separetly

--- a/Tracker_Dashboard/templates/base_stud.html
+++ b/Tracker_Dashboard/templates/base_stud.html
@@ -189,6 +189,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'js/stud.js' %}"></script>
+    
 </body>
 </html>
