--- a/Tracker_Dashboard/templates/base_super.html
+++ b/Tracker_Dashboard/templates/base_super.html
@@ -184,6 +184,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'js/super.js' %}"></script>
 </body>
 </html>
