--- a/Tracker_Dashboard/templates/base_stud.html
+++ b/Tracker_Dashboard/templates/base_stud.html
@@ -49,10 +49,14 @@
                 <!-- User Info -->
                 <div class="flex items-center px-4 py-4 border-b border-light-border dark:border-dark-border">
                     <div class="w-10 h-10 rounded-full bg-primary flex items-center justify-center text-white font-bold">
-                        <span id="user-initial">D</span>
+                        <span id="user-initial">
+                            {{request.user.username | slice:":1" }}
+                        </span>
                     </div>
                     <div class="ml-3">
-                        <p id="user-name" class="font-medium">Desire Munyanyi</p>
+                        <p id="user-name" class="font-medium">
+                            {{request.session.firstname}}
+                        </p>
                         <p id="user-role" class="text-sm text-gray-500 dark:text-gray-400">Student</p>
                     </div>
                 </div>
