--- a/Tracker_Dashboard/templates/settings.html
+++ b/Tracker_Dashboard/templates/settings.html
@@ -18,7 +18,9 @@
                     <div class="w-2/3">
                         <div class="flex mb-4">
                             <div class="w-20 h-20 rounded-full bg-primary flex items-center justify-center text-white text-2xl font-bold mr-4" id="settings-avatar">
-                                <span id="settings-initial">D</span>
+                                <span id="settings-initial">
+                                    {{request.user.username | slice:":1" }}
+                                </span>
                             </div>
                             <div class="flex flex-col justify-center">
                                 <button class="px-3 py-1 bg-primary hover:bg-secondary text-white rounded-md text-sm mb-2">
@@ -31,8 +33,10 @@
                         </div>
                         <div class="space-y-4">
                             <div>
-                                <label class="block text-sm font-medium mb-1">Name</label>
-                                <input type="text" id="settings-name" value="Desire Munyanyi" class="w-full px-3 py-2 rounded-md border border-light-border dark:border-dark-border bg-light-bg dark:bg-dark-bg text-base">
+                                <label class="block text-sm font-medium mb-1">
+                                    Name
+                                </label>
+                                <input type="text" id="settings-name" value={{request.user.username}} class="w-full px-3 py-2 rounded-md border border-light-border dark:border-dark-border bg-light-bg dark:bg-dark-bg text-base">
                             </div>
                             <div>
                                 <label class="block text-sm font-medium mb-1">Email Address</label>
